# bygg

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: bygg-cli.1.in  byggConfig.cmake
docs/: Doxyfile
examples/AThousandParagraphs/: CMakeLists.txt  main.cpp
examples/ByggHTMLParser/: CMakeLists.txt  main.cpp
examples/ByggWebsiteTemplate/: CMakeLists.txt
examples/ByggWebsiteTemplate/include/: Sites.hpp
examples/ByggWebsiteTemplate/src/: Sites.cpp  main.cpp
examples/FindAndIndex/: CMakeLists.txt  main.cpp
examples/Hello World/: CMakeLists.txt  main.cpp
examples/HelloWorld/: main.cpp
examples/VariantIterator/: CMakeLists.txt  main.cpp
include/bygg/: bygg.hpp  except.hpp  types.hpp  version.hpp
include/bygg/CSS/: CSS.hpp  color.hpp  color_struct.hpp  color_type_enum.hpp  element.hpp  formatting_enum.hpp  function.hpp  properties.hpp  property.hpp  stylesheet.hpp  type_enum.hpp
include/bygg/CSS/impl/: color_conversions.hpp
include/bygg/HTML/: HTML.hpp  content_formatter.hpp  document.hpp  element.hpp  element_enum.hpp  find_enum.hpp  formatting_enum.hpp  parser.hpp  properties.hpp  property.hpp  pseudocode_generator.hpp  section.hpp  tag.hpp  type_enum.hpp
include/bygg/HTML/impl/: libxml2.hpp
src/: bygg.cpp  version.cpp
src/CSS/: color.cpp  element.cpp  function.cpp  properties.cpp  property.cpp  stylesheet.cpp
src/CSS/impl/: color_conversions.cpp
src/HTML/: content_formatter.cpp  document.cpp  element.cpp  parser.cpp  properties.cpp  property.cpp  pseudocode_generator.cpp  section.cpp  tag.cpp
src/HTML/impl/: libxml2.cpp
src/cli/: IniManager.hpp  bygg-cli.cpp
tests/: CSS.cpp  HTML.cpp  general.cpp  parser.cpp  test.cpp  test.hpp
